the grpcClient project was introduced as a client and proto file added into it.

--- a/grpcClient/grpcClient.csproj
+++ b/grpcClient/grpcClient.csproj
@@ -7,7 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
+	<ItemGroup>
+		<Protobuf Include="greet.proto" GrpcServices="Client" />
+	</ItemGroup>
+	
+	<ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.27.2" />
     <PackageReference Include="Grpc.Net.Client" Version="2.63.0" />
     <PackageReference Include="Grpc.Tools" Version="2.65.0-pre1">
