Server Streaming completed.

--- a/grpcServer/grpcServer.csproj
+++ b/grpcServer/grpcServer.csproj
@@ -8,6 +8,7 @@
 	<ItemGroup>
 		<Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
 		<Protobuf Include="Protos\unary.proto" GrpcServices="Server" />
+		<Protobuf Include="Protos\serverStreaming.proto" GrpcServices="Server" />
 	</ItemGroup>
 
 	<ItemGroup>
