--- a/grpcClient/grpcClient.csproj
+++ b/grpcClient/grpcClient.csproj
@@ -10,6 +10,7 @@
 	<ItemGroup>
 		<Protobuf Include="greet.proto" GrpcServices="Client" />
     <Protobuf Include="unary.proto" GrpcServices="Client" />
+    <Protobuf Include="serverStreaming.proto" GrpcServices="Client" />
 	</ItemGroup>
 
 	<ItemGroup>
