Client streaming completed.

--- a/grpcClient/grpcClient.csproj
+++ b/grpcClient/grpcClient.csproj
@@ -11,6 +11,7 @@
 		<Protobuf Include="greet.proto" GrpcServices="Client" />
     <Protobuf Include="unary.proto" GrpcServices="Client" />
     <Protobuf Include="serverStreaming.proto" GrpcServices="Client" />
+    <Protobuf Include="clientStreaming.proto" GrpcServices="Client" />
 	</ItemGroup>
 
 	<ItemGroup>
