--- a/grpcServer/grpcServer.csproj
+++ b/grpcServer/grpcServer.csproj
@@ -9,6 +9,7 @@
 		<Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
 		<Protobuf Include="Protos\unary.proto" GrpcServices="Server" />
 		<Protobuf Include="Protos\serverStreaming.proto" GrpcServices="Server" />
+		<Protobuf Include="Protos\clientStreaming.proto" GrpcServices="Server" />
 	</ItemGroup>
 
 	<ItemGroup>
